src/styles/pgcr.module.css
.main {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    overflow: auto;
    max-width: 1000px;
}

.soft-rectangle {
    border-radius: 15px;
    border: var(--border);
    border-style: solid;
    border-width: 1px;
}

.summary-card {
    flex: 1;
    background-color: rgba(30, 30, 30, 0.35);
    min-width: 95%;
    padding: 0.8em;
    position: relative;

    color: white;
}

@media only screen and (orientation: portrait) {
    .summary-card {
        min-width: 300px;
        max-width: 95%;
    }
}

.activity-card-header-container {
    margin-bottom: 10px;
}

.activity-card-header-top {
    padding: 5px;
    padding-bottom: 0;
    flex-grow: 1;
    display: flex;
    flex-direction: row;
}

.left-info {
    flex-grow: 1;
}

.raid-info-top {
    font-size: medium;
}

.raid-difficulty {
    font-weight: bold;
    margin-right: 0.5rem;
}

.completion-time {
    color: rgb(182, 182, 182);
    font-style: oblique;
    padding: 3px;
}

.raid-name {
    font-weight: 900;
    font-size: xx-large;
    line-height: 100%;
    text-transform: uppercase;
}

.right-info {
    flex-grow: 1;
    padding-top: 10px;
    padding-right: 10px;
    margin-left: 5px;
}

.duration {
    flex-grow: 1;
    font-style: oblique;
    font-size: x-large;
    display: flex;
    justify-content: right;
}

.duration > span {
    margin: 0.2rem;
}

.activity-card-header-attributes {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    gap: 1em;
}

.cp-error {
    min-width: 50%;
    max-width: 70%;
}

.cp-error > p {
    margin: 0.4em 0;
    font-size: small;
    font-style: italic;
}

.tags-container {
    flex-basis: 50%;
    padding: 5px;

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 0.2em;
}

.tag {
    margin: auto 0;

    border-radius: 6px;
    border-width: 2px;

    padding: 4px 7px;
    background-color: rgb(125, 168, 65);

    font-size: large;
    white-space: nowrap;
}

.members {
    margin-top: 10px;
    border-radius: 10px;
    height: auto;
    display: grid;
    grid-gap: 0.5em;
    grid-template-rows: 1fr;
    grid-template-columns: repeat(2, 1fr);
}

.members-low {
    grid-template-columns: 1fr;
}

.entry-card {
    min-width: 260px;
    height: 85px;
    overflow: hidden;
    position: relative;
    padding: 0;
}

.emblem {
    position: absolute;
    z-index: 0;
    top: 0;
    width: 100%;
    height: 100%;

    opacity: 0.95;
    overflow: hidden;
}

.emblem img {
    max-height: 100%;
}

.member-card {
    z-index: 1;
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;

    font-size: larger;
    overflow: hidden;
}

.color-film {
    position: absolute;
    z-index: 2;
    top: 0;
    width: 100%;
    height: 100%;

    border-radius: 12px;
}

/* This sets the top row to span 2 columns if odd count and landscape*/
@media only screen and (orientation: landscape) {
    .members-odd > .entry-card:nth-child(1) {
        grid-column-start: 1;
        grid-column-end: span 2;
        margin-right: 25%;
        margin-left: 25%;
    }
}

.class-logo {
    padding-left: 1.2vw;
    height: 100%;

    background: linear-gradient(to right, #212121a5, #ffffff00);

    display: flex;
    align-items: center;
    justify-content: center;
}

.class-logo > img {
    max-height: 50px;
    aspect-ratio: 1/1;
    margin: 5px;
    margin-left: 8px;
}

.centered {
    align-items: center;
}

.centered span {
    margin: auto;
}

.contained-span {
    flex: 1;
    display: inline;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    flex-shrink: 1;
    color: white;
}

.member-name {
    min-width: 100px;
    flex-grow: 4;
    overflow: hidden;

    padding: 10px;
    border-radius: 12px;

    display: flex;
    flex-direction: column;

    font-weight: bolder;
    font-size: 1.25rem;
    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.535);
}

.class-name {
    font-weight: 100;
    color: var(--tertiary-text);
}

.quick-stats-container {
    flex-basis: 50px;
    height: 100%;

    margin-left: auto;
    padding-right: 1em;
    display: flex;
    justify-content: flex-end;

    background: linear-gradient(to right, #45454500, #0000002f, #00000066, #00000099);
}

.quick-stats {
    margin-left: 0.5em;
    box-sizing: border-box;
    max-width: 100%;
    overflow-y: none;

    padding: 0.6em 0;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.1em;
}

.quick-stat {
    display: flex;
    flex-direction: row;
    gap: 0.2em;
    align-items: center;

    justify-content: flex-start;
}

.quick-stat span {
    margin-left: 0.2em;
    min-width: 2.5em;
    text-align: left;

    font-size: medium;
    font-style: italic;
    font-weight: 500;
    color: var(--search-text);
}

.quick-stat img {
    width: 15px;
    height: 15px;
}

.flawless-diamond {
    flex: 1;
    margin: auto 0;

    min-width: 44px;
    min-height: 44px;
    max-width: 63px;
    max-height: 63px;
    padding: 5px;
    aspect-ratio: 1/1;
}

.members-header {
    display: flex;
    gap: 0.7em;
    flex-direction: row;
    flex-wrap: wrap;
}

.selected-entry-card {
    flex: 1;
    min-width: 220px;
    height: 85px;

    overflow: hidden;
    position: relative;
    padding: 0;

    display: flex;
}

.class-button-container {
    height: auto;
    flex: 1;

    margin: 2px;
    padding: 0;

    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    justify-content: space-evenly;
    gap: 0.8em;
}

.class-button {
    padding: 0.5em;

    background-color: rgba(151, 151, 151, 0.274);

    display: flex;
    flex-direction: row;
    justify-content: center;
}

.class-button > img {
    max-width: 70px;
    aspect-ratio: 1;
    margin: auto;
}

.member-profile-button {
    height: 85px;
    flex: 1;
    background-color: rgba(55, 85, 79, 0.287);

    display: flex;
    align-items: center;
    justify-content: center;
}

.member-profile-link {
    margin-right: 0.7em;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
}

.view-profile-icon {
    flex: 1;
    max-height: 30px;
    max-width: 30px;
    margin: 10px;
    margin-right: 15px;
}

.member-profile-link > span {
    flex: 1;
    color: white;
    font-size: 1.15rem;
    display: inline-flex;
}

.summary-stats {
    box-sizing: border-box;
    flex-grow: 1;
    margin: 0px;
    margin-top: 10px;
    padding: 0 10px;
    min-width: 250px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}

.summary-stat {
    min-height: 57px;
    padding: 10px 15px;
    background-color: rgba(78, 9, 9, 0.35);
    display: flex;
}

.character-stat {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 10px;

    background-color: var(--modal-background);

    display: flex;
    align-items: center;
}

.summary-stat-content {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 100%;
    height: 100%;
}

.stat-icon {
    margin-right: 10px;
    max-width: 50px;
    max-height: 50px;
    aspect-ratio: 1/1;
    flex: 1;
}

.summary-stat-info {
    flex: 3;
    display: flex;
    padding: 3px;
    flex-direction: column;
    justify-content: center;
}

.summary-stat-name {
    text-align: left;
    text-transform: uppercase;
    font-size: small;
    font-style: italic;
    color: var(--secondary-text);
    line-height: 100%;
}

.summary-stat-value {
    font-weight: 900;
    font-size: x-large;
    text-align: left;
    line-height: 100%;
}

.dnf {
    background-color: rgba(103, 0, 0, 0.561);
    border-color: rgb(157, 20, 10);
}

.dnf span {
    color: rgb(96, 70, 70);
}

.dnf img {
    opacity: 0.3;
}

/** dynamic styling */
.selected {
    border-color: rgb(214, 246, 255);
}
.selectable {
    border-width: 2px;
    transition: transform 0.05s ease-in-out;
}

.selectable:hover {
    transform: scale(1.015);
    cursor: pointer;
}

/* adjust entry grid for mobile */
@media only screen and (orientation: portrait) {
    .members {
        grid-template-columns: 1fr;
    }
    .entry-card {
        height: 69px;
    }
    .quick-stats {
        padding: 0.4em 0;
    }
    .quick-stat span {
        font-size: small;
    }
    .flawless-diamond {
        min-width: 24px;
        min-height: 24px;
        max-width: 40px;
        max-height: 40px;
    }
    .quick-stat img {
        width: 13px;
        height: 13px;
    }
    .summary-stat {
        padding: 5px 8px;
    }
    .summary-stat-name {
        font-size: smaller;
    }
    .summary-stat-value {
        font-size: medium;
    }
    .stat-icon {
        max-width: 35px;
        max-height: 35px;
    }
}

